--- a/package.json
+++ b/package.json
@@ -9,18 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "antd": "^5.19.3",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.5",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
+    "redux-logger": "^3.0.6",
+    "swiper": "^11.1.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
