--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.19.3",
+    "antd-zod": "^5.1.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^10.0.1",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
